apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
    spec:
      serviceAccountName: vaultwarden
      securityContext:
        fsGroup: 1000
      tolerations: []
      containers:
        - name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:1.37.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: "/bw-data"
              name: data
          livenessProbe:
            httpGet:
              path: /alive
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            limits:
              memory: 150Mi
        - name: backup
          image: ghcr.io/rbnis/vaultwarden-backup-sidecar:1.2.0
          volumeMounts:
            - mountPath: "/data"
              name: data
              readOnly: true
            - mountPath: "/backup"
              name: backup
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              cpu: 10m
              memory: 25Mi
            limits:
              memory: 25Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data-pvc
        - name: backup
          emptyDir: {}
