apps/vaultwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: websocket
      port: 3012
      targetPort: websocket
      protocol: TCP
