apps/vaultwarden/istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - ./pass.rbn.is
      port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: false
    - hosts:
        - ./pass.rbn.is
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cert-vaultwarden
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  hosts:
    - pass.rbn.is
  gateways:
    - vaultwarden
  http:
    - name: vaultwarden
      route:
        - destination:
            host: vaultwarden
